--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   image_picker: "^0.4.5"
-
+  dio: 2.1.0
 
 dev_dependencies:
   flutter_test:
