--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   image_picker: "^0.4.5"
   dio: 2.1.0
+  dots_indicator: ^0.0.3
 
 dev_dependencies:
   flutter_test:
