--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: "^0.4.5"
   dio: 2.1.0
   page_indicator: ^0.1.3
+  url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
