--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio: 2.1.0
   page_indicator: ^0.1.3
   url_launcher: ^5.0.2
+  shared_preferences: ^0.5.1+2
 
 dev_dependencies:
   flutter_test:
