--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   page_indicator: ^0.1.3
   url_launcher: ^5.0.2
   shared_preferences: ^0.5.1+2
+  path_provider: ^0.5.0+1
 
 dev_dependencies:
   flutter_test:
