--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   url_launcher: ^5.0.2
   shared_preferences: ^0.5.1+2
   path_provider: ^0.5.0+1
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
