--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  image_picker: "^0.4.5"
+  image_picker: ^0.5.4+3
   dio: 2.1.0
   page_indicator: ^0.1.3
   url_launcher: ^5.0.2
