--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^0.5.1+2
   path_provider: ^0.5.0+1
   transparent_image: ^1.0.0
+  photo_view: ^0.3.1
 
 dev_dependencies:
   flutter_test:
