--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path_provider: ^0.5.0+1
   transparent_image: ^1.0.0
   photo_view: ^0.3.1
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
