--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   transparent_image: ^1.0.0
   photo_view: ^0.3.3
   http: ^0.12.0+2
+  mockito: ^4.0.0
 
 dev_dependencies:
   flutter_test:
