--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,7 @@ dependencies:
   photo_view: ^0.9.1
   http: ^0.12.0+2
   mockito: ^4.0.0
-  flutter_native_image:
-    git: https://github.com/btastic/flutter_native_image.git
+  flutter_native_image: ^0.0.5
 
 dev_dependencies:
   flutter_test:
