--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
   assets:
     - assets/images/plant.png
     - assets/res/response_new_api
+    - assets/res/predict.json
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
