--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,20 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
     <string>Can I use camera please?</string>
+    <key>UIBackgroundModes</key>
+    <array>
+       <string>fetch</string>
+       <string>remote-notification</string>
+    </array>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>Explain why your app uses music</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Explain why your app uses photo library</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This sample uses the microphone to record your speech and convert it to text.</string>
+    <key>UIBackgroundModes</key>
+    <array>
+    	<string>audio</string>
+    </array>
 </dict>
 </plist>
