--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  image_picker: ^0.5.4+3
+  image_picker: ^0.6.3+4
   page_indicator: ^0.1.3
   url_launcher: ^5.0.2
   shared_preferences: ^0.5.1+2
-  path_provider: ^0.5.0+1
+  path_provider: ^1.6.5
   transparent_image: ^1.0.0
   photo_view: ^0.9.1
   http: ^0.12.0+2
   mockito: ^4.0.0
   flutter_native_image: ^0.0.5
+  file_picker: ^1.4.3+2
+  flutter_sound: ^2.1.1
 
 dev_dependencies:
   flutter_test:
