--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_native_image: ^0.0.5
   file_picker: ^1.4.3+2
   flutter_sound: ^2.1.1
+  dio: 3.0.9
 
 dev_dependencies:
   flutter_test:
