--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/plant.png
-    - assets/res/response_new_api
+    - assets/test/response_for_test_low.json
+    - assets/test/response_for_test_high.json
+    - assets/test/predict.json
   #  - assets/res/predict.json
   #  - images/a_dot_ham.jpeg
 
